--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
                 background-color: black
             }
             @font-face{
-                font-family: condensed;
-                src: url(fonts/condensed.woff2);
+                font-family: avenir;
+                src: (fonts/AvenirLTStd-Black.otf);
             }
 
             @font-face{
-                font-family: roboto;
-                src: url(fonts/Roboto-Regular.ttf);
+                font-family: avenir;
+                src: (fonts/AvenirLTStd-Roman.otf);
             }
 
-            @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@300;400;500&display=swap');
-
             :root {
-                --bs-body-font-family: 'Roboto', sans-serif;
+                --bs-body-font-family: 'Avenir', sans-serif;
                 /* el que es color de fondo */
                 --bs-body-bg: rgba(0, 0, 0, 1) !important;
                 /* el que es color de texto */
