--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                 font-family: avenir;
                 src: (fonts/AvenirLTStd-Roman.otf);
             }
-
+            @font-face{
+                font-family: lulo;
+                src: (fonts/Lulo Clean One Bold.otf);
+            }
+            
             :root {
                 --bs-body-font-family: 'Avenir', sans-serif;
                 /* el que es color de fondo */
@@ -35,7 +39,7 @@
             h4,
             h5,
             h6 {
-                font-family: condensed, sans-serif;
+                font-family: lulo, bold;
                 font-weight: 700;
             }
 
