--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
                 background-color: black
             }
             @font-face{
-                font-family: avenir;
+                font-family: "avenir";
                 src: (fonts/AvenirLTStd-Black.otf);
             }
 
             @font-face{
-                font-family: avenir;
+                font-family: "avenir";
                 src: (fonts/AvenirLTStd-Roman.otf);
             }
             @font-face{
-                font-family: lulo;
+                font-family: "lulo";
                 src: (fonts/Lulo Clean One Bold.otf);
             }
             
             :root {
-                --bs-body-font-family: 'Avenir', sans-serif;
+                --bs-body-font-family: 'Avenir';
                 /* el que es color de fondo */
                 --bs-body-bg: rgba(0, 0, 0, 1) !important;
                 /* el que es color de texto */
@@ -39,7 +39,7 @@
             h4,
             h5,
             h6 {
-                font-family: lulo, bold;
+                font-family: 'Lulo', bold;
                 font-weight: 700;
             }
 
@@ -90,17 +90,17 @@
                 text-shadow: 0 0 4px black;
                 line-height: 1;
                 color: #eee;
-                font-family: 'Roboto', sans-serif;                
+                font-family: 'Lulo';                
             }
             .txtsvg{
                 font-size: calc(1rem);
                 color: #eee;  
-                font-family: 'Roboto', sans-serif;        
+                font-family: 'Avenir', sans-serif;        
             }
 
 
             #basic-addon1 {
-                font-family: condensed, sans-serif;
+                font-family: 'Lulo' ;
                 background-color: #eee;
                 border-radius: 0%;
                 color: #c83a02;
