--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
         <title>Crímenes de odio en New York</title>
-        <link rel="preconnect" href="fonts" />
-        <link href="fonts" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap" rel="stylesheet" />
         <style>
+             @font-face{
+                font-family: avenir black;
+                src: url(fonts/AvenirLTStd-Black.otf);
+            }
+
+            @font-face{
+                font-family: avenir;
+                src: url(fonts/AvenirLTStd-Roman.otf);
+            }
+
+            @import url(fonts);
+
             :root {
                 --bs-font-sans-serif: "Avenir";
             }
