--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
                 font-family: avenir;
                 src: url(fonts/AvenirLTStd-Roman.otf);
             }
-
+              @font-face{
+                font-family: lulo;
+                src: url(fonts/Lulo Clean One Bold.otf);
+            }
             @import url(fonts);
+            
+            h1 {
+                font-family: lulo;
+            }
 
             :root {
                 --bs-font-sans-serif: "Avenir";
