--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             @import url(fonts);
             
             h1 {
-                font-family: lulo;
+                font-family: "Lulo";
             }
 
             :root {
