--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             }
             @import url(fonts);
             
-            h1 {
-                font-family: "Lulo";
-            }
-
             :root {
                 --bs-font-sans-serif: "Avenir";
             }
+              h1 {
+                font-family: lulo;
+                font-weight: 500;
+            }
+
             :hover {
                 transition: all ease 0.5s;
             }
