--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
               @font-face{
                 font-family: lulo;
-                src: url(fonts/Lulo Clean One Bold.otf);
+                src: url(fonts/Lulo.otf);
             }
             @import url(fonts);
             
@@ -38,7 +38,7 @@
                 font-weight: 500;
             }
             header p {
-                text-align: justify;
+                text-align:;
             }
             header p.lead {
                 line-height: 1.6;
