--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
               @font-face{
                 font-family: lulo;
-                src: url(fonts/Lulo.otf);
+                src: url(Lulo.otf);
             }
             @import url(fonts);
             
