--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap" rel="stylesheet" />
         <style>
+             main{
+                background-color: #0f2025
+            }
              @font-face{
                 font-family: avenir black;
                 src: url(fonts/AvenirLTStd-Black.otf);
