--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
         <title>Huella de carbono de los perros</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap" rel="stylesheet" />
-        <style>
-             main{
-                background-color: #0f2025
-            }
+        <style>         
              @font-face{
                 font-family: avenir black;
                 src: url(fonts/AvenirLTStd-Black.otf);
@@ -60,7 +57,7 @@
             }
         </style>
     </head>
-    <body>
+    <body bgcolor="#0f2025">
         <header class="container">
             <div class="row py-5">
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
