--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 font-family: lulo;
                 font-weight: 500;
             }
+              body { 
+                background-color: #0f2025;
+            }    
 
             :hover {
                 transition: all ease 0.5s;
@@ -57,7 +60,7 @@
             }
         </style>
     </head>
-    <body bgcolor="#0f2025">
+    <body>
         <header class="container">
             <div class="row py-5">
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
