--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               h1 {
                 font-family: lulo;
                 font-weight: 500;
+                color: #fcc120;
             }
               body { 
                 background-color: #0f2025;
