--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
         <header class="container">
             <div class="row py-5">
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <h1 class="mb-3 mt-5 text-center">Datos preocupantes: Crímenes de odio en New York</h1>
+                    <h1 class="mb-3 mt-5 text-center">La huella de carbono de los perros</h1>
 
-                    <h2 class="fs-6 mb-5 text-center text-uppercase">Helena Martínez</h2>
+                    <h2 class="fs-6 mb-5 text-center text-uppercase"></h2>
 
-                    <p class="lead">
-                        Se define como crimen o delito de odio a aquel lamentable suceso en el que una persona es atacada por otra, motivada exclusivamente por su pertenencia a un determinado grupo social. Es decir, según su edad, sexo, género, religión, raza, etnia, nacionalidad, discapacidad, orientación sexual o ideologías políticas.
+                    <p class="text-light">
+                       aquí va texto
                     </p>
-                    <p>Si bien se puede concluir que los delitos de odio varían dependiendo del contexto y de los prejuicios que tenga una sociedad específica, de igual manera están presentes en todas las sociedades, las cuales ya han ido creando medios para intentar solucionar esta situación.</p>
-                  <p> A continuación, un gráfico que representa datos en torno a los crímenes de odio ocurridos en la ciudad de New York. </p>
+                    <p class="text-light"> otro texto </p>
+                  <p class="text-light"> y otro </p>
                 </div>
             </div>
         </header>
