--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             @import url(fonts);
             
             :root {
-                --bs-font-sans-serif: "Avenir";
+                font-family: avenir;
             }
               h1 {
                 font-family: lulo;
