--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
             }
             @import url(fonts);
             
-            :root {
-                font-family: avenir;
-            }
               h1 {
                 font-family: lulo;
                 font-weight: 500;
                 color: #fcc120;
             }
+            p {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  letter-spacing: 0.1rem;
+  word-spacing: 0.3rem;
+  font-family: avenir, sans-serif;
+}
               body { 
                 background-color: #0f2025;
             }    
