--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap" rel="stylesheet" />
         <style>         
              @font-face{
-                font-family: avenir black;
+                font-family: avenirblack;
                 src: url(fonts/AvenirLTStd-Black.otf);
             }
 
@@ -29,12 +29,9 @@
                 color: #fcc120;
             }
             p {
-  font-size:1.2rem;
-  line-height: 1.2;
-  letter-spacing: 0.1rem;
-  word-spacing: 0.2rem;
-  font-family: avenir, sans-serif;
-}
+                font-weight: 100;
+                font-family: avenir;
+           }
               body { 
                 background-color: #0f2025;
             }    
