--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <style>         
              @font-face{
                 font-family: avenirblack;
-                src: url(fonts/AvenirLTStd-Black.otf);
+                src: url(AvenirLTStd-Black.otf);
             }
 
             @font-face{
                 font-family: avenir;
-                src: url(fonts/AvenirLTStd-Roman.otf);
+                src: url(avenir.ttf);
             }
               @font-face{
                 font-family: lulo;
