--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
               body { 
                 background-color: #0f2025;
             }    
-
+              .container-fluid{
+              background-image: linear-gradient(#154F4C, #75C799);
+            }
+            
             :hover {
                 transition: all ease 0.5s;
             }
@@ -324,7 +327,7 @@
                 </div>
             </div>
         </main>
-        <footer class="container-fluid bg-dark text-white-50">
+        <footer class="container-fluid2 bg-dark text-white-50">
             <div class="row py-3">
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
