--- a/index.html
+++ b/index.html
@@ -74,10 +74,16 @@
                     <h2 class="fs-6 mb-5 text-center text-uppercase"></h2>
 
                     <p class="text-light">
-                       aquí va texto
+                       La huella de carbono es el conjunto de emisiones de gases de efecto invernadero producidos, directa o indirectamente, por personas u organizaciones en términos de CO2e. Por lo tanto, nos sirve para medir cómo las actividades y elecciones que realizamos contribuyen al calentamiento global.
                     </p>
-                    <p class="text-light"> otro texto </p>
-                  <p class="text-light"> y otro </p>
+                <div class="row align-items-center">
+                                <div class="col-10 col-md-9 mx-auto">
+                                    <object data="img/zonas2.svg" type="image/svg+xml" class="w-100"></object>
+                                </div>
+                <div class="col-6 col-md-3 mx-auto small">
+                         <dl>
+                    <p class="text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares.</p>
+                  <dt style="color: #FAC123;">Pero, ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente? </p>
                 </div>
             </div>
         </header>
