--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h2 class="fs-6 mb-5 text-center text-uppercase"></h2>
 
                     <p class="text-light">
-                       La huella de carbono es el conjunto de emisiones de gases de efecto invernadero producidos, directa o indirectamente, por personas u organizaciones en términos de CO2e. Por lo tanto, nos sirve para medir cómo las actividades y elecciones que realizamos contribuyen al calentamiento global.
+                       La huella de carbono es el conjunto de emisiones de gases de efecto invernadero producidos directa o indirectamente por personas u organizaciones en términos de CO2e. Por lo tanto, nos sirve para medir cómo las actividades y elecciones que realizamos contribuyen al calentamiento global.
                     </p>
                 <div class="row align-items-center">
                                 <div class="col-10 col-md-9 mx-auto">
