--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </p>
                 <div class="row align-items-center">
                                 <div class="col-10 col-md-9 mx-auto">
-                                    <object data="img/zonas2.svg" type="image/svg+xml" class="w-100"></object>
+                                    <object data="img/grafico.png" type="image/svg+xml" class="w-100"></object>
                                 </div>
                 <div class="col-6 col-md-3 mx-auto small">
                          <dl>
