--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     </p>
                 <div class="row align-items-center">
                                 <div class="col-10 col-md-9 mx-auto">
-                                    <object data="img/grafico.svg" type="image/svg+xml" class="w-100"></object>
+                                    <object data="img/grafico.svg" type="image/svg+xml" class="w-50"></object>
                                 </div>
-                <div class="col-6 col-md-3 mx-auto small">
+                <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                          <dl>
                     <p class="text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares.</p>
                   <dt style="color: #FAC123;">Pero, ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente? </p>
