--- a/index.html
+++ b/index.html
@@ -71,13 +71,11 @@
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <h1 class="mb-3 mt-5 text-center">La huella de carbono de los perros</h1>
 
-                    <h2 class="fs-6 mb-5 text-center text-uppercase"></h2>
-
                     <p class="text-light">
                        La huella de carbono es el conjunto de emisiones de gases de efecto invernadero producidos directa o indirectamente por personas u organizaciones en términos de CO2e. Por lo tanto, nos sirve para medir cómo las actividades y elecciones que realizamos contribuyen al calentamiento global.
                     </p>
                 <div class="row align-items-center">
-                                <div class="col-10 col-md-9 mx-auto">
+                                <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                                     <object data="img/grafico.svg" type="image/svg+xml" class="w-50"></object>
                                 </div>
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
