--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                         
                     <p class="text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares.</p>
                   <dt style="color: #FAC123;">Pero, ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente? </p>
+                  <p class="text-light"> ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
                 </div>
             </div>
         </header>
