--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                         
                     <p class="text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares.</p>
                   <dt style="color: #FAC123;">Pero, ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente? </p>
-                  <p class="text-light"> ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
+                    <p class="text-light"> 
+                       ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
                 </div>
                      <h1 class="mb-3 mt-5 text-center">¿Cómo puedo cambiar estas cifras?</h1>
                      <p class="text-light"> Como todo amante de los perros, queremos contribuir en el cuidado del medio ambiente donde vive nuestra mascota. Un ambiente sano y sustentable significa un mayor bienestar para nosotros y nuestra mascota perruna.</p>
