--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     </div>
                      <h1 class="mb-3 mt-5 text-center">¿Cómo puedo cambiar estas cifras?</h1>
-                     <p class="text-light"> Como todo amante de los perros, queremos contribuir en el cuidado del medio ambiente donde vive nuestra mascota. Un ambiente sano y sustentable significa un mayor bienestar para nosotros y nuestra mascota perruna.</p>
+                     <p class="p-5 text-light"> Como todo amante de los perros, queremos contribuir en el cuidado del medio ambiente donde vive nuestra mascota. Un ambiente sano y sustentable significa un mayor bienestar para nosotros y nuestra mascota perruna.</p>
             </div>
           
                     <p class="p-5">
