--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
         <main class="div1 container-fluid">
             <div class="row py-5">
-                <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    </div>
-                     <h1 class="mb-3 mt-5 text-center">¿Cómo puedo cambiar estas cifras?</h1>
+             <div class="row py-5">
+              <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
+                     <h2 class="mb-3 mt-5 text-center">¿Cómo puedo cambiar estas cifras?</h2>
                      <p class="p-5 text-light"> Como todo amante de los perros, queremos contribuir en el cuidado del medio ambiente donde vive nuestra mascota. Un ambiente sano y sustentable significa un mayor bienestar para nosotros y nuestra mascota perruna.</p>
                      <p class="p-5 text-light"> Si bien no podemos eliminar completamente la huella de carbono que generan los distintos productos caninos, sí podemos contribuir en el cuidado del rastro de CO2e en gran medida, al mismo tiempo que mantenemos la calidad de vida de nuestro perro.</p>
             </div>
