--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 font-weight: 500;
                 color: #fcc120;
             }
+                       h3 {
+                font-family: lulo;
+                font-weight: 500;
+                color: #184f4b;
+            }
             p {
                 font-weight: 100;
                 font-family: avenir;
@@ -92,6 +97,11 @@
                      <p class="p-5 text-light"> Como todo amante de los perros, queremos contribuir en el cuidado del medio ambiente donde vive nuestra mascota. Un ambiente sano y sustentable significa un mayor bienestar para nosotros y nuestra mascota perruna.</p>
                      <p class="p-5 text-light"> Si bien no podemos eliminar completamente la huella de carbono que generan los distintos productos caninos, sí podemos contribuir en el cuidado del rastro de CO2e en gran medida, al mismo tiempo que mantenemos la calidad de vida de nuestro perro.</p>
                       <p class="p-5 text-light"> A continuación te daremos algunos consejos para lograr esto:</p>
+                  
+                      <h1 class="mb-3 mt-5 text-center">Circular pet</h1>
+                     <h3 class="mb-3 mt-5 text-center">Beneficios de la proteína de insecto</h3>
+                      <p class="p-5 text-light"> Somos una empresa chilena formada el 2020 enfocada en producir pellet seco a base de harina de insecto rico en proteínas y minerales, autorizado por el Sevicio Agrícola Ganadero (SAG). Además, todos nuestros productos son desarrollados en procesos circulares sin costo ambiental para nuestro planeta.</p>
+                  
              </div>
                     <p class="p-5">
                         otro texto
