--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <h1 class="mb-3 mt-5 text-center">La huella de carbono de los perros</h1>
 
-                    <p class="text-light">
-                       La huella de carbono es el conjunto de emisiones de gases de efecto invernadero producidos directa o indirectamente por personas u organizaciones en términos de CO2e. Por lo tanto, nos sirve para medir cómo las actividades y elecciones que realizamos contribuyen al calentamiento global.
+                    <p class="p-5 text-light">La huella de carbono es el conjunto de emisiones de gases de efecto invernadero producidos directa o indirectamente por personas u organizaciones en términos de CO2e. Por lo tanto, nos sirve para medir cómo las actividades y elecciones que realizamos contribuyen al calentamiento global.
                     </p>
                 <div class="row align-items-center">
                     <object data="img/grafico2.svg" type="image/svg+xml" class="w-100"></object>
