--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   
                       <h1 class="mb-3 mt-5 text-center">Circular pet</h1>
                      <h3 class="mb-3 mt-5 text-center">Beneficios de la proteína de insecto</h3>
-                      <p class="p-5 text-teal"> Somos una empresa chilena formada el 2020 enfocada en producir pellet seco a base de harina de insecto rico en proteínas y minerales, autorizado por el Sevicio Agrícola Ganadero (SAG). Además, todos nuestros productos son desarrollados en procesos circulares sin costo ambiental para nuestro planeta.</p>
+                      <p class="p-5 text-dark"> Somos una empresa chilena formada el 2020 enfocada en producir pellet seco a base de harina de insecto rico en proteínas y minerales, autorizado por el Sevicio Agrícola Ganadero (SAG). Además, todos nuestros productos son desarrollados en procesos circulares sin costo ambiental para nuestro planeta.</p>
                   <h3 class="mb-3 mt-5 text-center">Alimentación saludable</h3>
                     <p class="p-5 text-dark"> Una de las características más importantes de nuestro alimento es su origen a base de insectos. Este tipo de proteína suma una serie de beneficios para la alimentación de tu perro y su bienestar al momento de comer.</p>
                     <h3 class="mb-3 mt-5 text-center">Cuidado del medio ambiente</h3>
