--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                      <p class="p-5 text-light"> Como todo amante de los perros, queremos contribuir en el cuidado del medio ambiente donde vive nuestra mascota. Un ambiente sano y sustentable significa un mayor bienestar para nosotros y nuestra mascota perruna.</p>
                      <p class="p-5 text-light"> Si bien no podemos eliminar completamente la huella de carbono que generan los distintos productos caninos, sí podemos contribuir en el cuidado del rastro de CO2e en gran medida, al mismo tiempo que mantenemos la calidad de vida de nuestro perro.</p>
                       <p class="p-5 text-light"> A continuación te daremos algunos consejos para lograr esto:</p>
+                  <div class="row align-items-center">
+                    <object data="img/baño-02.svg" type="image/svg+xml" class="w-100"></object>
                   
                       <h1 class="mb-3 mt-5 text-center">Circular pet</h1>
                      <h3 class="mb-3 mt-5 text-center">Beneficios de la proteína de insecto</h3>
