--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                       <p class="p-5 text-light"> A continuación te daremos algunos consejos para lograr esto:</p>
                   </div>
             <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <object data="img/AQUIVA.svg" type="image/svg+xml" class="w-200"></object>
+                    <object data="img/bano.svg" type="image/svg+xml" class="w-200"></object>
                   
                       <h1 class="mb-3 mt-5 text-center">Circular pet</h1>
                      <h3 class="mb-3 mt-5 text-center">Beneficios de la proteína de insecto</h3>
