--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             }
             p {
                 font-weight: 100;
+                font-size: 20px;
                 font-family: avenir;
            }
               body { 
