--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <object data="img/grafico2.svg" type="image/svg+xml" class="w-100"></object>
                         
                     <p class="text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares.</p>
-                  <p class="div2"> ">Pero, ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente? </p>
+                  <p class="div2">Pero, ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente? </p>
                     <p class="text-light"> 
                        ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
                 
