--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                   </div>
             <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <object data="img/bano.svg" type="image/svg+xml" class="w-200"></object>
+                    <object data="img/caca.svg" type="image/svg+xml" class="w-200"></object>
                   
                       <h1 class="mb-3 mt-5 text-center">Circular pet</h1>
                      <h3 class="mb-3 mt-5 text-center">Beneficios de la proteína de insecto</h3>
