--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
                     </p>
                      </div>
                 <div class="row align-items-center">
+                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <object data="img/grafico2.svg" type="image/svg+xml" class="w-100"></object>
                  </div>
-                 <div class="row py-5">       
+                 <div class="row py-5"> 
+                      <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <p class="text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares.</p>
                   <p class="div2">Pero, ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente? </p>
                     <p class="text-light"> 
@@ -109,7 +111,9 @@
                       <p class="p-5 text-light"> A continuación te daremos algunos consejos para lograr esto:</p>
                   </div>
             <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <object data="img/bano.svg" type="image/svg+xml" class="w-200"></object>
+                    <object data="img/bano.svg" type="image/svg+xml" class="d-none d-md-block w-200"></object>
+                    <object data="img/bano_celular.svg" type="image/svg+xml" class="d-md-none w-200"></object>
+                
                     <object data="img/caca.svg" type="image/svg+xml" class="w-200"></object>
                     <object data="img/juguetes.svg" type="image/svg+xml" class="w-200"></object>
                     <object data="img/juguetes.svg" type="image/svg+xml" class="w-200"></object>
