--- a/index.html
+++ b/index.html
@@ -90,15 +90,14 @@
                     <p class="p-2 text-light">La huella de carbono es el conjunto de emisiones de gases de efecto invernadero producidos directa o indirectamente por personas u organizaciones en términos de CO2e. Por lo tanto, nos sirve para medir cómo las actividades y elecciones que realizamos contribuyen al calentamiento global.
                     </p>
                      </div>
-                <div class="row align-items-center">
+                <div class="row py-5">
                      <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <object data="img/grafico2.svg" type="image/svg+xml" class="w-100"></object>
                  </div>
                  <div class="row py-5"> 
                       <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <p class="text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares.</p>
-                  <p class="div2">Pero, ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente? </p>
-                    <p class="text-light"> 
+                    <p class="text-light p-5"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares. Pero, <span class= "div2"> ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente?</span></p>
+                    <p class="p-2 text-light"> 
                        ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
                 </div>
         </header>
