--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                      <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <object data="img/grafico2.svg" type="image/svg+xml" class="w-100"></object>
                  </div>
+                        
                       <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <p class="p-1 text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares. Pero, <span class="div2"> ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente?</span></p>
                     <p class="p-1 text-light">
@@ -99,9 +100,11 @@
                      <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <object data="img/lolo.svg" type="image/svg+xml" class="w-200"></object>
                          </div>
-        </div></div></div></div></header>
-
-
+                        </div>
+                   </div>
+                </div>
+       
+        </header>
         <main class="div1 container-fluid">
             <div class="row pt-3">
               <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
