--- a/index.html
+++ b/index.html
@@ -137,15 +137,19 @@
                      <h3 class="mb-3 mt-5 text-center">Beneficios de la proteína de insecto</h3>
 
                       <p class="p-5 text-dark"> Somos una empresa chilena formada el 2020 enfocada en producir pellet seco a base de harina de insecto rico en proteínas y minerales, autorizado por el Sevicio Agrícola Ganadero (SAG). Además, todos nuestros productos son desarrollados en procesos circulares sin costo ambiental para nuestro planeta.</p>
-                    <object data="img/logo-02.svg" type="image/svg+xml" class="d-none d-md-block w-200"></object>
+                    <object data="img/logo-02.svg" type="image/svg+xml" class="w-200"></object>
 
                     <h3 class="mb-3 mt-5 text-center">Alimentación saludable</h3>
                     <p class="p-5 text-dark"> Una de las características más importantes de nuestro alimento es su origen a base de insectos. Este tipo de proteína suma una serie de beneficios para la alimentación de tu perro y su bienestar al momento de comer.</p>
-                <object data="img/beneficios.svg" type="image/svg+xml" class="d-none d-md-block w-200"></object>
 
+                  <object data="img/beneficios.svg" type="image/svg+xml" class="d-none d-md-block w-200"></object>
+                 <object data="img/beneficios_celular.svg" type="image/svg+xml" class="d-md-none w-200"></object>
+                          
                 <h3 class="mb-3 mt-5 text-center">Cuidado del medio ambiente</h3>
                    <p class="p-5 text-dark">La proteína de insectos comparada a los alimentos caninos tradicionales posee importantes beneficios medioamientales que ayudan a reducir la huella de carbono.</p>
                     <object data="img/medio ambiente.svg" type="image/svg+xml" class="d-none d-md-block w-200"></object>
+                    <object data="img/medio ambiente_celular.svg" type="image/svg+xml" class="d-md-none w-200"></object>
+                          
                  </div>
             </div>
         </div></main>
