--- a/index.html
+++ b/index.html
@@ -151,6 +151,45 @@
                  </div>
             </div>
         </div></main>
+        <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
+             <ul class="text-center" aria-label="Barra de redes sociales"><li 
+                id="dataItem-k9uyee84-comp-ih0eog7j" class="text-center">
+                <a data-testid="linkElement" href="https://www.instagram.com/circular.pet" target="_blank" class="_26AQd">
+                    <wix-image id="img_0_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-k9uyee84-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;40898a93cfff4578b1779073137eb1b4.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/40898a93cfff4578b1779073137eb1b4.png">
+                        <img src="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/40898a93cfff4578b1779073137eb1b4.png" alt="Gris Icono de Instagram" style="width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                    </wix-image>
+                </a>
+            </li>
+            <li id="dataItem-klvkualj-comp-ih0eog7j" class="text-center">
+                <a data-testid="linkElement" href="https://www.tiktok.com/@circular.pet?lang=es" target="_blank" class="_26AQd">
+                    <wix-image id="img_1_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-klvkualj-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png">
+                        <img src="https://static.wixstatic.com/media/11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png" alt="Tik Tok " style="width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                    </wix-image>
+                </a>
+            </li>
+            <li id="dataItem-klhdzx7x-comp-ih0eog7j" class="text-center">
+                <a data-testid="linkElement" href="https://twitter.com/CircularPet" target="_blank" class="_26AQd">
+                    <wix-image id="img_2_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-klhdzx7x-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;aeb686ff41244d85bc1232fcf7325ec0.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/aeb686ff41244d85bc1232fcf7325ec0.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/aeb686ff41244d85bc1232fcf7325ec0.png">
+                        <img src="https://static.wixstatic.com/media/aeb686ff41244d85bc1232fcf7325ec0.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/aeb686ff41244d85bc1232fcf7325ec0.png" alt="Twitter Circular Pet" style="width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                    </wix-image>
+                </a>
+            </li>
+            <li id="dataItem-ki6n6ktr-comp-ih0eog7j" class="text-center">
+                <a data-testid="linkElement" href="https://www.youtube.com/channel/UCXoaKPvkw6x24r62fJQi8DA?view_as=subscriber" target="_blank" class="_26AQd">
+                    <wix-image id="img_3_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-ki6n6ktr-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;a1fed5f687844a6e8f42e017f71dfcb4.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/a1fed5f687844a6e8f42e017f71dfcb4.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/a1fed5f687844a6e8f42e017f71dfcb4.png">
+                        <img src="https://static.wixstatic.com/media/a1fed5f687844a6e8f42e017f71dfcb4.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/a1fed5f687844a6e8f42e017f71dfcb4.png" alt="Canal Circular Pet" style="width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                    </wix-image>
+                </a>
+            </li>
+            <li id="dataItem-kaystd7e-comp-ih0eog7j" class="text-center">
+                <a data-testid="linkElement" href="https://www.facebook.com/Circular-Pet-102555211695721/?view_public_for=102555211695721" target="_blank" class="_26AQd">
+                    <wix-image id="img_4_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-kaystd7e-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;aebe5b6fd55f471a936c72ff2c8289d7.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/aebe5b6fd55f471a936c72ff2c8289d7.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/aebe5b6fd55f471a936c72ff2c8289d7.png">
+                        <img src="https://static.wixstatic.com/media/aebe5b6fd55f471a936c72ff2c8289d7.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/aebe5b6fd55f471a936c72ff2c8289d7.png" alt="Gris Facebook Icono" style="width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                    </wix-image>
+                </a>
+            </li>
+        </ul>
+        </div>
         <footer class="container-fluid bg-dark text-white-50">
             <div class="row py-3">
                 <div class="col-12">
