--- a/index.html
+++ b/index.html
@@ -190,15 +190,52 @@
             </li>
         </ul>
         </div>
+ </div>
+   <div class="container text-white">
+        <div class="row py-5">
+          <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto small">
+            <p class="text-center">
+              <strong>Equipo de Trabajo.</strong> <br>
+              Francisca Flores, Helena Martínez, Javiera Mieres, Teresa Muñoz, Antonella Rosati.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container text-white">
+        <div class="row py-5">
+          <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto small">
+            <p class="text-center">
+              <strong> Fuentes. </strong> <br>
+              <a style="color: white;" href="https://www.fao.org/ag/againfo/home/en/news_archive/2014_Insect_meal.html">
+                Insect meal has potential as a future animal feed, FAO study finds. 
+              </a>
+              , <br>
+              <a style="color: white;" href="https://espanol.epa.gov/la-energia-y-el-medioambiente/calculador-de-equivalencias-de-gases-de-efecto-invernadero">
+                Agencia de Protección Ambiental de Estados Unidos. Calculador de equivalencias de gases de efecto invernadero.
+              </a>
+              <br>
+              <a style="color: white;" href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs">
+                UK Government GHG Conversion Factors for Companyy Reporting.
+              </a>
+              <br>
+              <a style="color: white;" href="https://www.bbc.com/news/science-environment-49450935">
+                Insect-based food 'better for pets than top steak'
+              </a>
+              <br>
+              <a style="color: white;" href="https://www.cambridge.org/core/journals/journal-of-nutritional-science/article/protein-quality-of-insects-as-potential-ingredients-for-dog-and-cat-foods/4C395D62B8970EF115F5AB5FC57B6C0B">
+                Protein quality of insects as potential ingredients for dog and cat foods.
+              </a>
+              <br>
+              <a style="color: white;" href="methodology_ewg_meat_eaters_guide_to_health_and_climate_2011.pdf">
+                Meat Eaters Guide: Methodology
+              </a>
+            </p>
+          </div>
+        </div>
         <footer class="container-fluid bg-dark text-white-50">
             <div class="row py-3">
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
-                        <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                        <a href="https://github.com/helena-martinez">Helena Martínez</a>
-                        <a href="https://github.com/profesorfaco/dno075-2021-1/">Infografía Digital v2</a>
-                        <a href="https://github.com/profesorfaco/dno075-2021-1/tree/main/clase-05" class="d-none d-lg-inline">Lunes 12 de abril, 2021</a>
-                    </p>
                 </div>
             </div>
         </footer>
