--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <body>
         <header class="container">
             <div class="row pt-3">
+                <img src="img/portadafinal.png" class="top-illustration">
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <h1 class="mb-3 mt-5 text-center">La huella de carbono de los perros</h1>
                 </div>
