--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                   <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <p class="p-1 text-light"></p>
                     <p class="p-1 text-light"> Por otro lado, 73% de los chilenos afirman tener mascotas. Entre estas, los perros son los más populares. Pero, <span class="div2"> ¿Sabes cómo las elecciones en relación al cuidado de un perro afectan al medio ambiente?</span></p>
+                    <p class="p-1 text-light">
+                       ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
                 </div>
                      <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <object data="img/lolo.svg" type="image/svg+xml" class="w-200"></object>
@@ -141,17 +143,17 @@
 
                   <object data="img/beneficios.svg" type="image/svg+xml" class="d-none d-md-block w-200"></object>
                  <object data="img/beneficios_celular.svg" type="image/svg+xml" class="d-md-none w-200"></object>
-                          
+
                 <h3 class="mb-3 mt-5 text-center">Cuidado del medio ambiente</h3>
                    <p class="p-5 text-dark">La proteína de insectos comparada a los alimentos caninos tradicionales posee importantes beneficios medioamientales que ayudan a reducir la huella de carbono.</p>
                     <object data="img/medio ambiente.svg" type="image/svg+xml" class="d-none d-md-block w-200"></object>
                     <object data="img/medio ambiente_celular.svg" type="image/svg+xml" class="d-md-none w-200"></object>
-                          
+
                  </div>
             </div>
         </div></main>
         <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-             <ul class="text-center" aria-label="Barra de redes sociales"><li 
+             <ul class="text-center" aria-label="Barra de redes sociales" style= "display: flex; justify-content: space-around; align-items: center; padding-top: 40px; margin: 0; padding-left: 15px; padding-right: 15px;"><li
                 id="dataItem-k9uyee84-comp-ih0eog7j" class="text-center">
                 <a data-testid="linkElement" href="https://www.instagram.com/circular.pet" target="_blank" class="_26AQd">
                     <wix-image id="img_0_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-k9uyee84-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;40898a93cfff4578b1779073137eb1b4.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/40898a93cfff4578b1779073137eb1b4.png">
@@ -189,8 +191,26 @@
             </li>
         </ul>
         </div>
+        <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
+             <ul class="text-center" aria-label="Barra de redes sociales"><li
+                id="dataItem-k9uyee84-comp-ih0eog7j" class="text-center">
+                <a data-testid="linkElement" href="https://api.whatsapp.com/send?text=https://circularpet.github.io/cuidatuperro/" target="_blank" class="_26AQd">
+                    <wix-image id="img_0_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-k9uyee84-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;40898a93cfff4578b1779073137eb1b4.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/40898a93cfff4578b1779073137eb1b4.png">
+                        <img src="https://cdn.discordapp.com/attachments/816505802361143306/974126734888824862/compartir.png" alt="compartir" style="max-width: 50%; max-height: 50%; width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                    </wix-image>
+                </a>
+            </li>
+            <li id="dataItem-klvkualj-comp-ih0eog7j" class="text-center">
+                <a data-testid="linkElement" href="https://www.circular.pet/comprar" target="_blank" class="_26AQd">
+                    <wix-image id="img_1_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-klvkualj-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png">
+                        <img src="https://cdn.discordapp.com/attachments/816505802361143306/974126735207596083/comprar.png" alt="Tik Tok " style="width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                    </wix-image>
+                </a>
+            </li>
+        </ul>
+        </div>
  </div>
-   <div class="container text-white">
+   <div class="container text-white" style="display: flex; padding-top: 60px">
         <div class="row py-5">
           <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto small">
             <p class="text-center">
@@ -206,7 +226,7 @@
             <p class="text-center">
               <strong> Fuentes. </strong> <br>
               <a style="color: white;" href="https://www.fao.org/ag/againfo/home/en/news_archive/2014_Insect_meal.html">
-                Insect meal has potential as a future animal feed, FAO study finds. 
+                Insect meal has potential as a future animal feed, FAO study finds.
               </a>
               , <br>
               <a style="color: white;" href="https://espanol.epa.gov/la-energia-y-el-medioambiente/calculador-de-equivalencias-de-gases-de-efecto-invernadero">
@@ -231,11 +251,6 @@
             </p>
           </div>
         </div>
-        <footer class="container-fluid bg-dark text-white-50">
-            <div class="row py-3">
-                <div class="col-12">
-                    <p class="d-flex justify-content-between small p-1 m-0">
-                </div>
             </div>
         </footer>
 
